--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
         </p>
         <input type="submit" value="Vote" class="btn">
       </form>
+      <br><br>
+      <div id="chartContainer" style="height: 300px; width: 100%"></div>
     </div>
 
   <script
@@ -35,5 +37,8 @@
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/4.2.2/pusher.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
+  <script src="main.js"></script>
   </body>
 </html>
