--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
           <label for="windows">Windows</label>
         </p>
         <p>
-          <input type="radio" name="os" id="macos" value="Macos">
+          <input type="radio" name="os" id="macos" value="MacOS">
           <label for="macos">Macos</label>
         </p>
         <p>
-          <input type="radio" name="os" id="linux" value="Linux Distro">
+          <input type="radio" name="os" id="linux" value="Linux">
           <label for="linux">Linux Distro</label>
         </p>
         <p>
